--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -11,6 +11,7 @@ const lastUpdated = "22 February 2026";
   title={CONTENT.metadata.privacyPolicy.title}
   description={CONTENT.metadata.privacyPolicy.description}
   keywords={CONTENT.metadata.privacyPolicy.keywords}
+  noindex
 >
   <Navbar client:load transition:persist />
 
