--- a/src/pages/terms-of-service.astro
+++ b/src/pages/terms-of-service.astro
@@ -11,6 +11,7 @@ const lastUpdated = "22 February 2026";
   title={CONTENT.metadata.termsOfService.title}
   description={CONTENT.metadata.termsOfService.description}
   keywords={CONTENT.metadata.termsOfService.keywords}
+  noindex
 >
   <Navbar client:load transition:persist />
 
